# DHAI_AgenticAI

./: .gitignore  AgentReadme.md  README.md  blueprint
agent_core/: __init__.py  bootstrap.py  schemas.py
agent_core/core/: finalizer.py  parser.py  planner.py  router.py  state_machine.py  verifier.py
agent_core/eval/: __init__.py  harness.py
agent_core/examples/: run_small_case.py  test_local_agent.py
agent_core/policies/: __init__.py  base.py  builtin.py
agent_core/services/: __init__.py  llm_client.py
agent_core/skills/: SKILLS.md  __init__.py  base.py  builtin.py  extractors.py  registry.py
purple_agent/: pyproject.toml
purple_agent/prompts/: default.yaml
purple_agent/scenarios/fwa/: scenario.toml
purple_agent/src/agent/: agent_logic.py  executor.py  multimodal.py  server.py
purple_agent/tests/: test_a2a_direct.py  test_e2e.py  test_smoke.py
purple_agent/tests/FieldWorkArenaTest/: readme.txt
purple_agent/tests/FieldWorkArenaTest/agent/: client.py  fwa_green_agent.py
purple_agent/tests/FieldWorkArenaTest/agent/benchmark/: all_task_ids.toml
purple_agent/tests/FieldWorkArenaTest/agent/metrics/automatic/: automatic_evaluation.py
purple_agent/tests/FieldWorkArenaTest/agent/metrics/tasks/: data_source.py  task_loader.py
purple_agent/tests/FieldWorkArenaTest/agent_core/: client_utils.py  green_executor.py  purple_client.py
tests/: test_consistency.py  test_local_llm_integration.py  test_skills.py  test_small_case.py
