[project]
name = "dhai-purple-agent"
version = "0.1.0"
description = "General-purpose A2A purple agent for AgentBeats competition"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.5",
    "google-adk>=1.14.1",
    "google-genai>=1.36.0",
    "litellm>=1.74",
    "openai>=2.7.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.8",
    "pypdf>=5.0",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
purple-agent = "agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.hatch.build.targets.sdist]
include = ["src/agent"]
